	(CygbuildCmdAllMain): Add back signature verification and
	interactive question.
	(CygbuildCmdGPGVerifyMain): Add support for OPTION_FORCE.
	(CygbuildPatchList): Simplify call to find command.
	(CygbuildBootVariablesGlobalMain): Remove call to
	`CygbuildIsGbsCompat'. Always call
	`CygbuildBootVariablesGlobalShareMain'
	(CygbuildBootVariablesId): If GBS, set correct CYGBUILD_PROG_LIBPATH.

2008-03-05  Jari Aalto  <jari.aalto@cante.net>

	* README: (Dependencies): Remove.

	* doc/README.txt: (Information for developers): Delete obsolete
	Sourceforge information. Document commit message convention.
	(Dependencies): Moved from top level REAME here.

	* doc/cygbuild-rebuild.pod: Move location from bin/

	* etc/data/etc/data/perl-5.8.8.lst: New file.

	* etc/lib/cygbuild.pl: Move location from bin/
	(HELP::QUICK OVERVIEW): Present import command.
	(SYNOPSIS): Add brackets around -r. Not mandatory any more.

	* bin/cygbuild.sh: (CygbuildDefineGlobalCommands):
	Define GPG, WGET conditionally.
	(CygbuildGPGavailableCheck): Change from negative tests
	to positive tests.
	(CygbuildCmdDownloadCygwinPackage): Rewrite WGET test.
	(CygbuildCommandMain): Move `CygbuildDefineGlobalCommands'
	here from CygbuildCommandMain().
	(CygbuildCmdDownloadCygwinPackage): Rewite wget test.
	(CygbuildDefineGlobalCommands): Remove variable BASH.
	(CygbuildPathBinFast): Fix serious error. Return 1 if
	path is not found.
	(CygbuildMatchPatternList): Renamed. Was
	`CygbuildMatchBashPatternList'.
	(CygbuildBootVariablesId): Set CYGBUILD_PROG_PATH by searching
	PATH as last resort.
	(CygbuildCmdConfMain): Use CygbuildIsPerlPackage.
	Add Python handling.
	(CygbuildInstallCygwinPartMain): Improve error message.
	(CygbuildBootVariablesGlobalCacheSet): Display message only
	if verbose mode is on.
	(CygbuildCmdMkdirs): Display message only
	if verbose mode is on.
	(CygbuildCommandMain::import): Add readmefix and move mkdir command.
	(CygbuildCmdConfMain): Display message inly under verbose mode.